# chinese-input

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
core/: Makefile
core/include/: ime_core.h
core/include/ime/: engine.hpp
core/src/: c_api.cpp  engine.cpp  pinyin.cpp  pinyin.hpp
core/tests/: test_engine.cpp
data/: build_dict.py  fetch.sh
macos/: Makefile
macos/ZhiPin/: CandidatePanel.swift  Engine.swift  Info.plist  InputController.swift  ZhiPin-Bridging-Header.h  main.swift
macos/ZhiPin/en.lproj/: InfoPlist.strings
macos/ZhiPin/zh-Hans.lproj/: InfoPlist.strings
site/: index.html
windows/: CMakeLists.txt  INSTALL-NOTE.txt  README.md  installer.iss
windows/src/: CandidateWindow.cpp  CandidateWindow.h  Composition.cpp  DisplayAttribute.cpp  DisplayAttribute.h  EditSession.h  EngineBridge.cpp  EngineBridge.h  Globals.cpp  Globals.h  KeyHandler.cpp  Register.cpp  TextService.cpp  TextService.h  ZhiPin.def  ZhiPinGuids.h  dllmain.cpp
